# OpenGLES_Android_SpecialEffects

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle  texiao.jks
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: cascade.xml
app/src/main/cpp/: FaceTrack.cpp  FaceTrack.h  Log.h  native-lib.cpp
app/src/main/cpp/FaceAlignment/: CMakeLists.txt
app/src/main/java/com/leroy/texiao/: Constant.java  OpencvJni.java
app/src/main/java/com/leroy/texiao/camera/face/: Face.java
app/src/main/java/com/leroy/texiao/camera/utils/: CameraGLUtil.java  CameraHelper.java
app/src/main/java/com/leroy/texiao/filter/base/: MBaseFilter.java  MBsImgFilter.java  MBsTransFilter.java
app/src/main/java/com/leroy/texiao/filter/camera/: BeautyFilter.java  BigEyeFilter.java  BlueLineFilter.java  CameraFilter.java  HalfFboFilter.java  StickFilter.java
app/src/main/java/com/leroy/texiao/filter/image/: GaussFilter.java  GaussVFilter.java  GrayFilter.java  MoveBlurFilter.java  PipFilter.java  ScaleFilter.java  SplitFilter.java
app/src/main/java/com/leroy/texiao/filter/trans/: BlurTransFilter.java  CutFilter.java  FlipFilter.java  MixTransFilter.java  MoveTransFilter.java  PageUpFilter.java  WipeTransFilter.java
app/src/main/java/com/leroy/texiao/utils/: FilterBean.java  GLUtil.java  ViewUtil.java
app/src/main/java/com/leroy/texiao/view/: ListAdapter.java
app/src/main/java/com/leroy/texiao/view/activity/: CVActivity.java  FilterListActivity.java  ImgActivity.java  MainActivity.java  TransActivity.java
app/src/main/java/com/leroy/texiao/view/render/: CameraRender.java  MImgRender.java  MTransRender.java
app/src/main/res/drawable/: bg_check.xml
app/src/main/res/layout/: activity_cv.xml  activity_filter_list.xml  activity_img.xml  activity_main.xml  activity_transion.xml  item_filter.xml
app/src/main/res/raw/: anim_cut_frag.glsl  anim_cut_vertex.glsl  anim_flip_frag.glsl  anim_mix_frag.glsl  anim_move_frag.glsl  anim_page_frag.glsl  anim_wipe_frag.glsl  anim_wipe_vertex.glsl  frag_base.glsl  frag_base_trans.glsl  frag_beauty.glsl  frag_bigeye.glsl  frag_blueline.glsl  frag_camera.glsl  frag_gauss.glsl  frag_gray.glsl  frag_line.glsl  frag_moveblur.glsl  frag_pip.glsl  frag_scale.glsl  frag_split.glsl  frag_stick.glsl  vertex_base.glsl  vertex_base_trans.glsl  vertex_beauty.glsl  vertex_camera.glsl
app/src/main/res/values/: strings.xml  styles.xml  themes.xml
gradle/wrapper/: gradle-wrapper.properties
